# cybermarket

./: LICENSE  README.md
client/: LICENSE  MANIFEST.in  README.md  asyncsession.py  dodo.py  pyproject.toml  ui.py
client/docs/source/: conf.py  index.rst
client/locale/ru_RU/LC_MESSAGES/: Russian.po
client/locale/zh_CN/LC_MESSAGES/: Chinese.po
client/source/: asyncsession.rst  conf.py  index.rst  modules.rst
client/src/cybermarket_client/: __main__.py  asyncsession.py  lang.py  logic.py  request.py  settings.py  ui.py
client/src/cybermarket_client/static/: index.ui  merchant_index.ui  merchant_login.ui  merchant_register.ui  shanghu_index.ui  shanghu_login.ui  user_gouwuche.ui  user_login.ui  user_register.ui  (+2 more)
doc/source/: cmd_process.rst  conf.py  index.rst  invitation.rst  modules.rst  setting.rst
locale/ru_RU/LC_MESSAGES/: Russian.po
locale/zh_CN/LC_MESSAGES/: Chinese.po
server/: LICENSE  MANIFEST.in  README.md  cmd_process.py  dodo.py  invitation.py  lang.py  model.py  pyproject.toml  server.py  setting.py  setup.py  unit_test.py
server/database/: cybermarket.db
server/docs/source/: conf.py  index.rst  src.cybermarket_server.rst  src.rst
server/locale/ru_RU/LC_MESSAGES/: Russian.po
server/locale/zh_CN/LC_MESSAGES/: Chinese.po
server/model/: Client.py  Invitation.py  Merchant.py  Order.py  Product.py
server/src/: __main__.py  cmd_process.py  invitation.py  lang.py  model.py  setting.py
server/src/cybermarket_server/: __main__.py  cmd_process.py  invitation.py  model.py  setting.py
server/tests/: setting_unittest.py  unit_test.py
