[project]
name = "cybermarket-server"
version = "1.0.0"
authors = [
    {name = "Hailin Liu", email = "0123liuhailin@gmail.com"},
]
description = "The server of the online network market accepts login, listing, purchase, etc. requests sent by the client."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["shopping", "online-market"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas==2.2.1",
    "SQLAlchemy==2.0.25",
    "Babel==2.11.0",
    "doit==0.36.0",
    "flake8==7.0.0",
    "pydocstyle==6.3.0",
    "Sphinx==5.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"cybermarket-server" = "src.cybermarket_server"

[tool.setuptools.package-data]
